WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146875
DFG::DesiredWatchpoints should accept WatchpointSetType's that aren't necessarily pointers
https://bugs.webkit.org/show_bug.cgi?id=146875
Summary
DFG::DesiredWatchpoints should accept WatchpointSetType's that aren't necessa...
Filip Pizlo
Reported
2015-07-10 23:05:54 PDT
In the future we'll want to add a desired watchpoint set that's something like "please watch property 'Foo' for 'deletion' on structure 'S1'", so that the "set type" is struct like "struct MySet { StringImpl* property; Mode mode; Structure* structure };".
Attachments
the patch
(4.96 KB, patch)
2015-07-10 23:08 PDT
,
Filip Pizlo
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-07-10 23:08:22 PDT
Created
attachment 256646
[details]
the patch
Filip Pizlo
Comment 2
2015-07-10 23:42:54 PDT
Landed in
http://trac.webkit.org/changeset/186706
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug